Zegat_Online_IT_Hardware_Ordering_System/cut/tools_report/cppcheck/result.txt
menu.cpp:33:8: error: Uninitialized variable: choice [uninitvar]
 while(choice!=5)
       ^
menu.cpp:88:8: error: Uninitialized variable: choice [uninitvar]
 while(choice!=4)
       ^
menu.cpp:140:8: error: Uninitialized variable: choice [uninitvar]
 while(choice!=4)
       ^
menu.cpp:192:8: error: Uninitialized variable: choice [uninitvar]
 while(choice!=8)
       ^
